	PR middle-end/38283 	* varasm.c (emutls_finish): Fix common registration.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@142293 138bc75d-0d04-0410-961f-82ee72b054a4